[package]
name = "verytmp"
version = "0.1.0"
edition = "2021"


[dependencies]
cfg-if = "1.0"
# TODO: update this once nix does a release. this can be any rev that includes
# https://github.com/nix-rust/nix/pull/2339
nix = { git = "https://github.com/nix-rust/nix.git", rev = "1c2cad8bdff511133e87c2feb4a193bc351a46f5", features = [
    "fs",
    "mount",
    "sched",
    "socket",
    "process",
    "uio",
    "user",
] }
bitflags = { version = "*", optional = true }
libc = { version = "*", optional = true }
cap-std = { version = "3", optional = true }

[features]
default = ["dep:bitflags", "dep:libc"]
cap-std = ["dep:cap-std"]

[dev-dependencies]
tempfile = "3"
